# MARIO-COM

./: .gitignore  LICENSE  README.md
.github/workflows/: build_and_coveralls.yml
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _manipulation_8cpp.html  _manipulation_8cpp__incl.map  _manipulation_8cpp__incl.md5  _manipulation_8cpp_source.html  _manipulation_8hpp.html  _manipulation_8hpp__dep__incl.map  _manipulation_8hpp__dep__incl.md5  _manipulation_8hpp__incl.map  _manipulation_8hpp__incl.md5  _manipulation_8hpp_source.html  _navigation_8cpp.html  _navigation_8cpp__incl.map  _navigation_8cpp__incl.md5  _navigation_8cpp_source.html  _navigation_8hpp.html  _navigation_8hpp__dep__incl.map  _navigation_8hpp__dep__incl.md5  _navigation_8hpp__incl.map  _navigation_8hpp__incl.md5  _navigation_8hpp_source.html  _perception_8cpp.html  _perception_8cpp.js  _perception_8cpp__incl.map  _perception_8cpp__incl.md5  _perception_8cpp_source.html  _perception_8hpp.html  _perception_8hpp__dep__incl.map  _perception_8hpp__dep__incl.md5  _perception_8hpp__incl.map  _perception_8hpp__incl.md5  _perception_8hpp_source.html  _r_e_a_d_m_e_8md.html  _robot_sim_8cpp.html  _robot_sim_8cpp__incl.map  (+138 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+25 more)
docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_cache_8txt.tex  _c_make_lists_8txt.tex  _manipulation_8cpp.tex  _manipulation_8cpp__incl.md5  _manipulation_8hpp.tex  _manipulation_8hpp__dep__incl.md5  _manipulation_8hpp__incl.md5  _navigation_8cpp.tex  _navigation_8cpp__incl.md5  _navigation_8hpp.tex  _navigation_8hpp__dep__incl.md5  _navigation_8hpp__incl.md5  _perception_8cpp.tex  _perception_8cpp__incl.md5  _perception_8hpp.tex  _perception_8hpp__dep__incl.md5  _perception_8hpp__incl.md5  _r_e_a_d_m_e_8md.tex  _robot_sim_8cpp.tex  _robot_sim_8cpp__incl.md5  _robot_sim_8hpp.tex  _robot_sim_8hpp__dep__incl.md5  _robot_sim_8hpp__incl.md5  annotated.tex  bins_8launch_8py.tex  class_manipulation.tex  class_manipulation__coll__graph.md5  class_navigation.tex  class_navigation__coll__graph.md5  class_perception.tex  class_perception__coll__graph.md5  class_robot_sim.tex  class_robot_sim__coll__graph.md5  class_task_manipulation.tex  class_task_manipulation__coll__graph.md5  class_task_navigation.tex  class_task_navigation__coll__graph.md5  class_task_perception.tex  (+38 more)
garbage_collector/include/garbage_collector/: RobotSim.hpp
garbage_collector/src/: Manipulation.cpp  Navigation.cpp  Perception.cpp  RobotSim.cpp  main.cpp
garbage_collector/test/: main.cpp  manipulation_test.cpp  navigation_test.cpp  perception_test.cpp
mario_com/: CMakeLists.txt  package.xml  uncrustify_google_cpp_allman.cfg
mario_com/.cache/clangd/index/: Manipulation.cpp.21A27B6865A4C2CA.idx  Manipulation.hpp.48DB93DF752D1C5E.idx  Navigation.cpp.08B5CA69DA933D53.idx  Navigation.hpp.8DD9AC1906C833D6.idx  Perception.cpp.9302B74AFD0D5F6F.idx  Perception.hpp.9AA332F4B9572EF3.idx  RobotSim.cpp.0620C1FD7400C114.idx  RobotSim.hpp.E71A7028F4116B37.idx  main.cpp.766A077F8C077883.idx  main.cpp.EB674494212D5E25.idx  manipulation_test.cpp.E69587200FC64213.idx  navigation_test.cpp.FCAFE66276535CCF.idx  perception_test.cpp.F040364A01FB2385.idx  sub_image.cpp.FC7F75B04669463B.idx  sub_test.cpp.96DC4484E9EEE591.idx
mario_com/include/mario_com/: Manipulation.hpp  Navigation.hpp  Perception.hpp  RobotSim.hpp
mario_com/launch/: bins.launch.py  hospital.launch.py
mario_com/maps/: hospitalmap.pgm  hospitalmap.yaml
mario_com/models/bin_cylinder/: model.config  model.sdf
mario_com/models/simple_hospital/: model.config  model.sdf
mario_com/models/small_hospital/: model.config  model.sdf
mario_com/scripts/: coverage.info  coverage_cleaned.info  generate_coverage_report.bash
mario_com/src/: Manipulation.cpp  Navigation.cpp  Perception.cpp  RobotSim.cpp  main.cpp  sub_image.cpp  sub_test.cpp
mario_com/test/: main.cpp  manipulation_test.cpp  navigation_test.cpp  perception_test.cpp
mario_com/worlds/: simple_hospital.world  small_hospital.world
results/: cppcheck.txt  cpplint.txt
