<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mario_com</name>
  <version>0.1.0</version>
  <description>Mobile Autonomous Robot for Indoor and Outdoor Collection of Medical waste (MARIO.COM)</description>
  <maintainer email="okritvik@gmail.com">okritvik</maintainer>
  <maintainer email="bchukkal@terpmail.umd.edu">bchukkal</maintainer>
  <maintainer email="adarshmalapaka@gmail.com">adarshmalapaka</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>OpenCV</depend>

  <exec_depend>ros2launch</exec_depend>
    
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
